2016-09-06  Devin Rousso  <dcrousso+webkit@gmail.com>

        Web Inspector: Cannot undo in breakpoint editor
        https://bugs.webkit.org/show_bug.cgi?id=152858

        Reviewed by Brian Burg.

        * UserInterface/Controllers/BreakpointPopoverController.js:
        (WebInspector.BreakpointPopoverController.prototype._conditionCodeMirrorBeforeChange):
        Since the breakpoint editor only allows a single line of JavaScript, it attempts to remove
        all "\n" characters.  During an "undo" action, this is not possible.

2016-09-04  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Enable and enforce some recommended and stylistic ESLint rules
        https://bugs.webkit.org/show_bug.cgi?id=161567

        Reviewed by Brian Burg.

        * .eslintrc:
        * UserInterface/Base/EventListener.js:
        * UserInterface/Base/EventListenerSet.js:
        * UserInterface/Base/MIMETypeUtilities.js:
        * UserInterface/Base/Main.js:
        * UserInterface/Controllers/CodeMirrorTokenTrackingController.js:
        * UserInterface/Controllers/DOMTreeManager.js:
        * UserInterface/Controllers/TimelineManager.js:
        * UserInterface/Models/CSSKeywordCompletions.js:
        * UserInterface/Models/DOMNode.js:
        * UserInterface/Models/DOMNodeStyles.js:
        * UserInterface/Models/Frame.js:
        * UserInterface/Models/Geometry.js:
        * UserInterface/Models/ProfileNode.js:
        * UserInterface/Models/RenderingFrameTimelineRecord.js:
        * UserInterface/Models/SourceCodeLocation.js:
        * UserInterface/Protocol/RemoteObject.js:
        * UserInterface/Views/ApplicationCacheFrameContentView.js:
        * UserInterface/Views/ContextMenu.js:
        * UserInterface/Views/DOMTreeContentView.js:
        * UserInterface/Views/DOMTreeElement.js:
        * UserInterface/Views/DataGrid.js:
        * UserInterface/Views/GeneralTreeElement.js:
        * UserInterface/Views/HeapAllocationsTimelineDataGridNode.js: